feat(theme): global body theme propagation, dynamic CSS classes, dark/light/system support, fixes for all cards and error pages

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,15 @@
   functions = "netlify/functions"
   publish = "dist"
 
+[api]
+  directory = "netlify/functions" # Directory where your Netlify Functions are located
+
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
+  force = true
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
@@ -11,10 +20,10 @@
 
 [dev]
   command = "npm run dev" # Command to start your dev server
-  port = 5173 # Port that the dev server will be listening on
+  port = 3000 # Port that the dev server will be listening on
   publish = "dist" # Folder with the static content for _redirect file
   functions = "netlify/functions" # Folder with the Netlify Functions
-  targetPort = 3000 # Port that the dev server will be listening on
+  targetPort = 5173 # Port that the dev server will be listening on
   autoLaunch = true # Automatically open the browser when starting the dev server
   framework = "vite" # Framework used for the project
 
